# Simple_Script

./: .gitignore  CHANGELOG.md  Position.py  README.md  SymbolTable.py  constants.py  context.py  error.py  example_script.simc  function.py  grammar.txt  interpreter.py  lexer.py  main.py  node.py  number.py  parse.py  parse_result.py  position.py  pyproject.toml  requirements.txt  rt_result.py  setup.sh  shell.py  simple_script.py  string_with_arrows.py  symbol_table.py  token.py  tokens.py  unit_tests.py  value.py
.github/workflows/: simplescript.yml
docs/: conf.py  getting-started.rst  index.rst  language-reference.rst
docs/api/: core.rst  errors.rst  index.rst  types.rst
examples/: README.md  arithmetic.simc  comprehensive_demo.simc  fibonacci.simc  functions.simc  lists_advanced.simc  lists_basic.simc  lists_operations.simc  loops.simc  loops_and_conditionals.simc  maps_advanced.simc  maps_basic.simc  maps_operations.simc  string_operations.simc  strings.simc
simplescript/: __init__.py  __main__.py  __version__.py  cli.py  runtime.py
simplescript/ast/: __init__.py  nodes.py
simplescript/core/: __init__.py  constants.py  context.py  interpreter.py  lexer.py  parser.py
simplescript/errors/: __init__.py  errors.py
simplescript/tokens/: __init__.py  position.py  token.py
simplescript/types/: __init__.py  base.py  function.py  list.py  map.py  number.py  string.py
simplescript/utils/: __init__.py  parse_result.py  rt_result.py  string_with_arrows.py  symbol_table.py
tests/: test_integration.py
