[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "simplescript-lang"
version = "2.0.0"
description = "A simple programming language interpreter supporting variables, functions, loops, and conditionals"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "Ammar"},
]
keywords = [
    "programming-language",
    "interpreter",
    "lexer",
    "parser",
    "simplescript",
    "educational",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Interpreters",
    "Topic :: Software Development :: Compilers",
    "Topic :: Education",
]

[project.urls]
Homepage = "https://github.com/Ammar-Raneez/Simple_Script"
Repository = "https://github.com/Ammar-Raneez/Simple_Script"
Issues = "https://github.com/Ammar-Raneez/Simple_Script/issues"

[project.scripts]
simplescript = "simplescript.cli:main"

[project.optional-dependencies]
dev = [
    "sphinx>=7.0",
    "sphinx-rtd-theme>=2.0",
    "flake8>=6.0",
]

[tool.setuptools.packages.find]
include = ["simplescript*"]
